Fix minor style fix

--- a/t-air-search.html
+++ b/t-air-search.html
@@ -26,7 +26,7 @@ of this component to control the behaviour of this component.
             padding: 0 10px 5px;
         }
         
-        :host t-form {
+        t-form {
             padding: 0;
             margin: 0;
             max-width: 100%;
