--- a/demo/index.html
+++ b/demo/index.html
@@ -6,19 +6,29 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="../t-air-search.html">
-    <link rel="import" href="../t-air-search-api.html">
     <link rel="import" href="../../t-mystique-auth/t-mystique-auth.html">
-    <link rel="import" href="../../t-shared-components/theme.html">
+    <link rel="import" href="../../t-shared-components/theme.html">    
+
+    <link rel="import" href="../t-air-search.html">
+    <link rel="import" href="../../t-shared-lib/t-base-api.html">
+    <link rel="import" href="../Eva.AirSearchAPITranslator.html">
+
+    <style>
+    t-air-search t-form{
+        height: 100%;
+    }
+    </style>
 </head>
 
 <body>
     <template is="dom-bind" id="domBindTemplate">
 
-        <t-air-search id="searchView" suggestion-url="http://qa-mystiquecode.tavisca.com/api/Content/autosuggest/" query-params="token={{tokenResponse.authenticationToken}}"></t-air-search>
+        <t-air-search id="searchView" suggestion-url="http://demo.travelnxt.com/api/Content/autosuggest/" query-params="token={{tokenResponse.authenticationToken}}" min-start-date="1" event-name="t-air-search"></t-air-search>
 
-        <t-air-search-api id="searchApi" loading={{loading}} api-base-url="http://qa-mystiquecode.tavisca.com/" api-relative-url="api/flight/search" auth-token="{{tokenResponse.authenticationToken}}"></t-air-search-api>
-        <t-mystique-auth name="nxtb2bsite" url="http://qa-mystiquecode.tavisca.com/api/authentication/authenticate/context" token-response="{{tokenResponse}}" auto></t-mystique-auth>
+        <t-base-api id="searchApi" loading={{loading}} method="POST" api-base-url="http://demo.travelnxt.com/" api-relative-url="api/flight/search" auth-token="{{tokenResponse.authenticationToken}}" event-name="t-air-search" translator-type="Eva.AirSearchAPITranslator"></t-base-api>
+
+        <t-mystique-auth name="mystiquedemo" url="http://demo.travelnxt.com/api/authentication/authenticate/context" token-response="{{tokenResponse}}" auto></t-mystique-auth>
+        
         <template is="dom-if" if="{{loading}}">
             <div>API in-progress, wait..</div>
         </template>
@@ -26,11 +36,9 @@
 </body>
 <script>
 window.addEventListener('WebComponentsReady', function(e) {
-    var template = document.getElementById('domBindTemplate');
-
-    template.$.searchView.addEventListener('t-air-search-flights', template.$.searchApi.onSearch.bind(template.$.searchApi));
-    template.$.searchApi.addEventListener('t-air-search-api-success', template.$.searchView.onSearchSuccess.bind(template.$.searchView));
-    template.$.searchApi.addEventListener('t-air-search-api-error', template.$.searchView.onSearchFailure.bind(template.$.searchView));
+    var apiComp = document.getElementById('searchApi');
+    apiComp.addEventListener(apiComp.eventName + '-api-success', function(e){ alert('search success - '+ e.detail.searchId ) });
+    apiComp.addEventListener(apiComp.eventName + '-api-error', function(e){ alert('search failed - '+ e.detail.message) });
 
 });
 </script>
