[Change]  Integrated t-air-search-api.html from shared libs

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,13 +6,11 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+
     <link rel="import" href="../../t-shared-components/theme.html">    
-
-    <link rel="import" href="../t-air-search.html">
-    <link rel="import" href="../../t-shared-lib/t-base-api.html">
     <link rel="import" href="../../iron-meta/iron-meta.html">   
-    <link rel="import" href="../Eva.AirSearchAPITranslator.html">
-
+    <link rel="import" href="../../t-shared-lib/t-air-search-api.html">
+    <link rel="import" href="../t-air-search.html">
 
     <style>
     t-air-search t-form{
@@ -24,35 +22,33 @@
 <body>
     <template is="dom-bind" id="domBindTemplate">
 
-        <iron-meta key="contextName" value="mystiquedemo" type="globals"></iron-meta>
+        <iron-meta key="Eva.contextName" value="mystiquedemo" type="globals"></iron-meta>
+        <iron-meta key="Eva.apiBaseUrl" value="http://demo.travelnxt.com/api/" type="globals"></iron-meta>
 
-        <t-air-search id="searchView" suggestion-url="http://demo.travelnxt.com/api/Content/autosuggest/" query-params="token={{tokenResponse.authenticationToken}}" min-start-date="1" event-name="t-air-search"></t-air-search>
+        <t-air-search-api id="searchApi" loading={{loading}}></t-air-search-api>
 
-        <t-base-api id="searchApi" loading={{loading}} method="POST" api-base-url="http://demo.travelnxt.com/api/" api-relative-url="flight/search" event-name="t-air-search" translator-type="Eva.AirSearchAPITranslator"></t-base-api>
-
-
-
-        <!-- <t-mystique-auth name="mystiquedemo" url="http://demo.travelnxt.com/api/authentication/authenticate/context" token-response="{{tokenResponse}}" auto></t-mystique-auth> -->
+        <t-air-search id="searchView" suggestion-url="http://demo.travelnxt.com/api/Content/autosuggest/" min-start-date="1"></t-air-search>
         
         <template is="dom-if" if="{{loading}}">
             <div>API in-progress, wait..</div>
         </template>
+
     </template>
 </body>
 <script>
 window.addEventListener('WebComponentsReady', function(e) {
     var apiComp = document.getElementById('searchApi');
     var airSearchComp = document.querySelector('t-air-search');
+    
     apiComp.addEventListener(apiComp.eventName + '-api-success', function(e){ alert('search success - '+ e.detail.searchId ) });
     apiComp.addEventListener(apiComp.eventName + '-api-error', function(e){ alert('search failed - '+ e.detail.message) });
 
-    if(apiComp.isReady){
-        debugger;
+    //TODO: Remove after creating api component for location suggestions 
+    if(apiComp.isReady){        
         airSearchComp.queryParams = 'token=' + apiComp.authToken;
     }
     else{
-        apiComp.addEventListener('t-auth-api-success', function(e){
-            debugger;
+        apiComp.addEventListener('t-auth-api-success', function(e){            
             airSearchComp.queryParams = 'token=' + e.detail;
         });
     }    
