fix added property to pass minimum booking date.. Added example in Demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <t-air-search></t-air-search>
+    <t-air-search book-Date-Difference="40"></t-air-search>
 </body>
 
 </html>
